--- a/TicTacToe/package.json
+++ b/TicTacToe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "propdrilling",
+  "name": "tictactoe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "recoil": "^0.7.7"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
